add order tester, hmc generator and vefifier and basics of login
