# models/macreq.go
@@ -1,0 +1,6 @@
+package models
+
+type MacReq struct {
+	Action string `json:"action"`
+	Value  string `json:"value"`
+}
